--- a/index.html
+++ b/index.html
@@ -3,10 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Boostrap libraries-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     <title>Krishna Portfolio</title>
 </head>
 <body>
-    <h1>HELLO WORLD</h1>
-    <h2>this is just a test</h2>
+    <div class="container-md">
+        <div class="row">
+          <div class="col-md-5">
+                <div class="h-100 p-5 text-bg-dark rounded-3 bimg1">
+                  <h2>Information Contact</h2>
+                  <p>Rent Camera Bali</p>
+
+                  <br><br>
+
+                  <div class="d-md-flex">
+                    <img width="40" height="32" src="Assets/phone.png" alt="" class="me-3">
+                    <h5>0896-8602-7950</h5>
+                  </div>
+                  <br><br>
+                  <div class="d-md-flex">
+                    <img width="40" height="32" src="Assets/mail.png" alt="" class="me-3">
+                    <h5>Rentalkameradps@gmail.com</h5>
+                  </div>
+                  <br><br>
+                  <div class="d-md-flex">
+                    <img width="40" height="32" src="Assets/location.png" alt="" class="me-3">
+                    <h5>Jl. Pulau Moyo 1, Denpasar, Bali.</h5>
+                  </div>
+
+                  <br><br><br><br><br><br><br><br>
+
+                  <div class="d-flex justify-content-evenly">
+                    <a href="http://www.instagram.com/yicambalii/"><img class="hoovy" width="50" height="50" src="Assets/ig.png" alt=""></a>
+                    <a href="https://wa.me/6289686027950"><img class="hoovy" width="50" height="50" src="Assets/WA.png" alt=""></a>
+                    <a href="mailto:rentalkameradps@gmail.com"><img class="hoovy" width="50" height="50" src="Assets/gmail (1).png" alt=""></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="col-md-5">
+                <div class="h-100 p-5 text-bg-dark rounded-3 bimg1">
+                  <h2>Information Contact</h2>
+                  <p>Rent Camera Bali</p>
+
+                  <br><br>
+
+                  <div class="d-md-flex">
+                    <img width="40" height="32" src="Assets/phone.png" alt="" class="me-3">
+                    <h5>0896-8602-7950</h5>
+                  </div>
+                  <br><br>
+                  <div class="d-md-flex">
+                    <img width="40" height="32" src="Assets/mail.png" alt="" class="me-3">
+                    <h5>Rentalkameradps@gmail.com</h5>
+                  </div>
+                  <br><br>
+                  <div class="d-md-flex">
+                    <img width="40" height="32" src="Assets/location.png" alt="" class="me-3">
+                    <h5>Jl. Pulau Moyo 1, Denpasar, Bali.</h5>
+                  </div>
+
+                  <br><br><br><br><br><br><br><br>
+
+                  <div class="d-flex justify-content-evenly">
+                    <a href="http://www.instagram.com/yicambalii/"><img class="hoovy" width="50" height="50" src="Assets/ig.png" alt=""></a>
+                    <a href="https://wa.me/6289686027950"><img class="hoovy" width="50" height="50" src="Assets/WA.png" alt=""></a>
+                    <a href="mailto:rentalkameradps@gmail.com"><img class="hoovy" width="50" height="50" src="Assets/gmail (1).png" alt=""></a>
+                  </div>
+                </div>
+              </div>
+          </div>
+    </div>
 </body>
 </html>
