--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container-md">
         <div class="row">
-          <div class="col-md-5">
+          <div class="col-md-6 mb-4">
                 <div class="h-100 p-5 text-bg-dark rounded-3 bimg1">
                   <h2>Information Contact</h2>
                   <p>Rent Camera Bali</p>
@@ -44,7 +44,7 @@
               </div>
             </div>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-6">
                 <div class="h-100 p-5 text-bg-dark rounded-3 bimg1">
                   <h2>Information Contact</h2>
                   <p>Rent Camera Bali</p>
