--- a/index.html
+++ b/index.html
@@ -9,73 +9,14 @@
     <title>Krishna Portfolio</title>
 </head>
 <body>
-    <div class="container-md">
-        <div class="row">
-          <div class="col-md-6 mb-4">
-                <div class="h-100 p-5 text-bg-dark rounded-3 bimg1">
-                  <h2>Information Contact</h2>
-                  <p>Rent Camera Bali</p>
-
-                  <br><br>
-
-                  <div class="d-md-flex">
-                    <img width="40" height="32" src="Assets/phone.png" alt="" class="me-3">
-                    <h5>0896-8602-7950</h5>
-                  </div>
-                  <br><br>
-                  <div class="d-md-flex">
-                    <img width="40" height="32" src="Assets/mail.png" alt="" class="me-3">
-                    <h5>Rentalkameradps@gmail.com</h5>
-                  </div>
-                  <br><br>
-                  <div class="d-md-flex">
-                    <img width="40" height="32" src="Assets/location.png" alt="" class="me-3">
-                    <h5>Jl. Pulau Moyo 1, Denpasar, Bali.</h5>
-                  </div>
-
-                  <br><br><br><br><br><br><br><br>
-
-                  <div class="d-flex justify-content-evenly">
-                    <a href="http://www.instagram.com/yicambalii/"><img class="hoovy" width="50" height="50" src="Assets/ig.png" alt=""></a>
-                    <a href="https://wa.me/6289686027950"><img class="hoovy" width="50" height="50" src="Assets/WA.png" alt=""></a>
-                    <a href="mailto:rentalkameradps@gmail.com"><img class="hoovy" width="50" height="50" src="Assets/gmail (1).png" alt=""></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-                <div class="h-100 p-5 text-bg-dark rounded-3 bimg1">
-                  <h2>Information Contact</h2>
-                  <p>Rent Camera Bali</p>
-
-                  <br><br>
-
-                  <div class="d-md-flex">
-                    <img width="40" height="32" src="Assets/phone.png" alt="" class="me-3">
-                    <h5>0896-8602-7950</h5>
-                  </div>
-                  <br><br>
-                  <div class="d-md-flex">
-                    <img width="40" height="32" src="Assets/mail.png" alt="" class="me-3">
-                    <h5>Rentalkameradps@gmail.com</h5>
-                  </div>
-                  <br><br>
-                  <div class="d-md-flex">
-                    <img width="40" height="32" src="Assets/location.png" alt="" class="me-3">
-                    <h5>Jl. Pulau Moyo 1, Denpasar, Bali.</h5>
-                  </div>
-
-                  <br><br><br><br><br><br><br><br>
-
-                  <div class="d-flex justify-content-evenly">
-                    <a href="http://www.instagram.com/yicambalii/"><img class="hoovy" width="50" height="50" src="Assets/ig.png" alt=""></a>
-                    <a href="https://wa.me/6289686027950"><img class="hoovy" width="50" height="50" src="Assets/WA.png" alt=""></a>
-                    <a href="mailto:rentalkameradps@gmail.com"><img class="hoovy" width="50" height="50" src="Assets/gmail (1).png" alt=""></a>
-                  </div>
-                </div>
-              </div>
-          </div>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="p-4 text-bg-dark rounded-3">
+        <img src="Images/PFP.jpg" alt="My profile picture" width="200" class="rounded mx-auto d-block">
+        <h2 class="text-center">I Putu Krishna Ananda Suparta Putra</h2>
+        <h4>I am a programmer, and media editor. I am friendly, good listener, and willing to learn something new to improve my skills.</h4>
+      </div>
     </div>
+  </div>
 </body>
 </html>
