--- a/index.html
+++ b/index.html
@@ -6,16 +6,104 @@
     <!--Boostrap libraries-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <!--CSS-->
+    <link rel="stylesheet" href="index.css">
     <title>Krishna Portfolio</title>
 </head>
-<body>
+<body class="bg-secondary">
   <div class="row">
     <div class="col-md-4">
       <div class="p-4 text-bg-dark rounded-3">
         <img src="Images/PFP.jpg" alt="My profile picture" width="200" class="rounded mx-auto d-block">
-        <h2 class="text-center">I Putu Krishna Ananda Suparta Putra</h2>
+        <h2 class="text-center">I Putu Krishna Ananda Suparta Putra</h2><br>
         <h4>I am a programmer, and media editor. I am friendly, good listener, and willing to learn something new to improve my skills.</h4>
+        <br>
+        <div class="border border-danger text-center rounded-5 p-2">Language</div>
+        <ul class="mt-1">
+          <li><h5>Bahasa Indonesia</h5></li>
+          <li><h5>English</h5></li>
+        </ul>
+        <div class="border border-danger text-center rounded-5 p-2">Skill Summary</div>
+        <ul class="mt-1">
+          <li><h5>English as Second Language</h5></li>
+          <li><h5>Web Design</h5></li>
+          <li><h5>Information Technology</h5></li>
+          <li><h5>System Information</h5></li>
+          <li><h5>Programming</h5></li>
+        </ul>
       </div>
+    </div>
+    <div class="col-md bclr">
+      <h1 class="text-center border-bottom border-black">Portfolio</h1>
+      <h1 class="text-center border-bottom border-opacity-10 border-black">Programming</h1>
+      <div class="row mx-auto">
+        <div class="col mb-2">
+          <div class="card" style="width: 18rem;">
+            <img src="Images/java.png" class="card-img-top imgj mx-auto d-block" alt="Java Programming Language">
+            <div class="card-body">
+              <h5 class="card-title">Java</h5>
+              <p class="card-text">List of program/project I have done using Java Programming Language.</p>
+              <a href="https://github.com/Echo1T/Java" class="btn btn-primary">View</a>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-2">
+          <div class="card" style="width: 18rem;">
+            <img src="Images/Python.svg.png" class="card-img-top imgp mx-auto d-block" alt="Python Programming Language">
+            <div class="card-body">
+              <h5 class="card-title">Python</h5>
+              <p class="card-text">List of program/project I have done using Python Programming Language.</p>
+              <a href="https://github.com/Echo1T/Python" class="btn btn-primary">View</a>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-2">
+          <div class="card" style="width: 18rem;">
+            <img src="Images/html.png" class="card-img-top imgp mx-auto d-block" alt="HTML Programming Language">
+            <div class="card-body">
+              <h5 class="card-title">HTML</h5>
+              <p class="card-text">List of pages/project I have done using HTML, CSS, JS and their frameworks.</p>
+              <a href="#" class="btn btn-primary">View</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <h1 class="text-center border-bottom border-opacity-10 border-black">Media Editing</h1>
+      <div class="row">
+        <div class="col mb-2">
+          <div class="card" style="width: 18rem;">
+            <img src="Images/vidEd.png" class="card-img-top" alt="Video Editing">
+            <div class="card-body">
+              <h5 class="card-title">Video Editing</h5>
+              <p class="card-text">List of video projects that I have done. All of them was done within Adobe Premiere</p>
+              <a href="https://drive.google.com/drive/folders/1r8NMaZ4UBuIBzLUfjMesJH89jOtVlDzJ?usp=sharing" class="btn btn-primary">View</a>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-2">
+          <div class="card" style="width: 18rem;">
+            <img src="Images/PE.png" class="card-img-top" alt="Photo Editing" height="180">
+            <div class="card-body">
+              <h5 class="card-title">Photo Editing</h5>
+              <p class="card-text">List of picture that I have edited. All pictures were edited within Adobe Photoshop and Canva</p>
+              <a href="https://drive.google.com/drive/folders/1RwYt2zA0kd1Y8Lf_7IvjEi1SFWf40vIX?usp=sharing" class="btn btn-primary">View</a>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-2">
+          <div class="card" style="width: 18rem;">
+            <img src="Images/DP.png" class="card-img-top" alt="Design Poster" height="180">
+            <div class="card-body">
+              <h5 class="card-title">Design Poster</h5>
+              <p class="card-text">List of poster that I have designed. All posters are designed within Canva</p>
+              <a href="https://drive.google.com/drive/folders/1oTIRuhYYyP4YLjwAOmbefili31LRXtJ4?usp=sharing" class="btn btn-primary">View</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
     </div>
   </div>
 </body>
