--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="card-body">
               <h5 class="card-title">HTML</h5>
               <p class="card-text">List of pages/project I have done using HTML, CSS, JS and their frameworks.</p>
-              <a href="#" class="btn btn-primary">View</a>
+              <a href="PHTML.html" class="btn btn-primary">View</a>
             </div>
           </div>
         </div>
